// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders error 1`] = `
<DocumentFragment>
  <div>
    Error: bad stuff
  </div>
</DocumentFragment>
`;

exports[`renders loading 1`] = `
<DocumentFragment>
  <div>
    Loading
  </div>
</DocumentFragment>
`;

exports[`renders with user 1`] = `
<DocumentFragment>
  <div>
    <div>
      Hello: Bobby
    </div>
    <button
      class="bg-blue-500 hover:bg-blue-700 text-white py-2 px-4 rounded focus:outline-none focus:shadow-outline"
    >
      Log out
    </button>
  </div>
</DocumentFragment>
`;

exports[`renders without user 1`] = `
"query currentPerson {
  currentPerson {
    fullName
    githubAuth
    id
  }
}
"
`;

exports[`renders without user 2`] = `
<DocumentFragment>
  LoginForm {}
</DocumentFragment>
`;
